basic-spring-boot-helm-jenkins/nexus/templates/nexus_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
